<resources>
    <string name="app_name">Lost&amp;FoundMyPart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Missing strings from layout files -->
    <string name="no_items_available">No items available</string>
    <string name="no_matching_items_found">No matching items found</string>
    <string name="claim_item">Claim Item</string>
    <string name="search_hint">Search by item name...</string>
    <string name="location_hint">Filter by location...</string>
    <string name="select_date">Select Date</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
</resources>